dark mode fixes

--- a/src/assets/stylesheets/application.scss
+++ b/src/assets/stylesheets/application.scss
@@ -7,6 +7,10 @@
     box-sizing: border-box;
 }
 
+html {
+    transition: background-color 0.2s linear;
+}
+
 body {
     font-family: $font-default;
     transition: background-color 0.2s linear;
